# cupid

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
docker/: .dockerignore  Dockerfile
internal/app/: app.py
internal/config/: settings.py
internal/entity/: base.py  userdata.py
internal/router/: __init__.py
internal/router/health/: __init__.py  health.py
internal/router/v1/: __init__.py  recommendation.py
internal/schema/: recommendation.py
internal/service/authentication/: user.py
internal/service/database/: __init__.py  asyncpg.py
internal/service/repository/: user_repository.py
internal/usecase/: recommendation.py
